--- a/wnm608_test/lib/css/styleguide.css
+++ b/wnm608_test/lib/css/styleguide.css
@@ -129,6 +129,9 @@ a:hover{
     border-radius: 0.5em;
     box-shadow:  0 0 10px rgba(0, 0, 0, 0.1);
 }
+.card.soft.menu-item:hover{
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.5);
+}
 .card.hard{
     border-radius: 0.5em;
     border: 2px solid var(--color-black)
